@@ -1,3 +1,8 @@
+2009-07-06 15:45  rsbivand
+
+	* ChangeLog, DESCRIPTION, R/spsample.R, inst/ChangeLog,
+	  man/spsample.Rd: sample for line objects fixes
+
 2009-07-05 15:34  rsbivand
 
 	* DESCRIPTION, R/SpatialLines-methods.R, R/spsample.R,
